quantum_benchmarks_platform/infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quantum-benchmarks
  labels:
    app: quasim
    vertical: quantum_benchmarks
